WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229388
REGRESSION(
r281389
): canUseSimplifiedTextMeasuring() needs to match with WidthIterator::applyCSSVisibilityRules()
https://bugs.webkit.org/show_bug.cgi?id=229388
Summary
REGRESSION(r281389): canUseSimplifiedTextMeasuring() needs to match with Widt...
Myles C. Maxfield
Reported
2021-08-22 16:02:46 PDT
REGRESSION(
r281389
): canUseSimplifiedTextMeasuring() needs to match with WidthIterator::applyCSSVisibilityRules()
Attachments
Patch
(4.17 KB, patch)
2021-08-22 16:05 PDT
,
Myles C. Maxfield
zalan
: review+
Details
Formatted Diff
Diff
Updated to include IFC Integration codepath
(6.13 KB, patch)
2021-08-22 16:35 PDT
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Updated to include IFC Integration codepath
(6.13 KB, patch)
2021-08-22 16:39 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Updated to include IFC Integration codepath
(6.12 KB, patch)
2021-08-22 16:41 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2021-08-22 16:05:25 PDT
Created
attachment 436135
[details]
Patch
Myles C. Maxfield
Comment 2
2021-08-22 16:35:25 PDT
Created
attachment 436137
[details]
Updated to include IFC Integration codepath
Myles C. Maxfield
Comment 3
2021-08-22 16:39:22 PDT
Created
attachment 436138
[details]
Updated to include IFC Integration codepath
Myles C. Maxfield
Comment 4
2021-08-22 16:41:14 PDT
Created
attachment 436139
[details]
Updated to include IFC Integration codepath
Myles C. Maxfield
Comment 5
2021-08-22 16:46:07 PDT
Committed
r281423
(
240813@main
): <
https://commits.webkit.org/240813@main
>
Radar WebKit Bug Importer
Comment 6
2021-08-22 16:47:15 PDT
<
rdar://problem/82223808
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug